fixed bad spacing when nav is hidden

--- a/src/css/individual/carousel-manager.css
+++ b/src/css/individual/carousel-manager.css
@@ -14,6 +14,10 @@
 	display: flex;
 }
 
+.custom-carousel[data-show-nav="false"] {
+	grid-template-rows: 1fr;
+}
+
 .custom-carousel[data-show-nav="false"] .carousel-nav-group {
 	display: none;
 }
